--- a/加密与解密.md
+++ b/加密与解密.md
@@ -30,3 +30,16 @@
 |Littel-endian|12h|34h|56h|78h|
 
 ![FmkHc6.png](https://s1.ax1x.com/2018/11/30/FmkHc6.png)
+
+### Windows 消息机制
+
+Windows 是一个消息驱动式系统。Windows 消息提供在1应用程序与应用程序之间、应用程序与 Windows 系统之间进行通信的手段。
+
+消息队列：
+
+* 系统消息队列
+* 应用程序消息队列
+
+## 动态分析技术
+
+
