--- a/加密与解密.md
+++ b/加密与解密.md
@@ -42,4 +42,21 @@ Windows 是一个消息驱动式系统。Windows 消息提供在1应用程序与
 
 ## 动态分析技术
 
+## 逆向分析技术
+
+### 函数
+
+#### 函数的识别
+
+* call 指令给出的地址就是被调用函数的起始地址
+* ret 指令则用于结束函数的执行，但不是所有的 ret 指令都标志着函数的结束
+
+#### 函数的参数
+
+函数的参数有3种方式：
+
+* 利用栈传递
+* 利用寄存器传递
+* 通过全局变量进行隐含参数传递
+
 
