--- a/算法导论.md
+++ b/算法导论.md
@@ -3,4 +3,9 @@
 
 ### 插入排序
 
-**输入**：n 个数的一个序列 $\langle a_1, a_2, \cdots, a_n \rangle$
+```python 
+# input : 5, 2, 4, 6, 1,3
+# output : 1, 2, 3, 4, 5, 6
+def insert_sort(arr):
+  n = len(arr)
+```
