--- a/算法导论.md
+++ b/算法导论.md
@@ -3,9 +3,21 @@
 
 ### 插入排序
 
-```python 
+```go
 # input : 5, 2, 4, 6, 1,3
 # output : 1, 2, 3, 4, 5, 6
-def insert_sort(arr):
-  n = len(arr)
+func inser_sort(nums [5]int) []int {
+  j := 1
+  for j < len(nums) {
+    key := nums[j]
+    i := j - 1
+    for i >= 0 && nums[i] > key {
+      nums[i+1] = nums[i]
+      i = i - 1
+    }
+    nums[i + 1] = key
+    j = j + 1
+  }
+  return nums
+}
 ```
