--- a/算法导论.md
+++ b/算法导论.md
@@ -4,14 +4,33 @@
 ### 插入排序
 
 ```go
-# input : 5, 2, 4, 6, 1,3
-# output : 1, 2, 3, 4, 5, 6
-func inser_sort(nums [5]int) []int {
+// input : 5, 2, 4, 6, 1,3
+// output : 1, 2, 3, 4, 5, 6
+func insert_sort(nums [6]int) [6]int {
   j := 1
   for j < len(nums) {
     key := nums[j]
     i := j - 1
     for i >= 0 && nums[i] > key {
+      nums[i+1] = nums[i]
+      i = i - 1
+    }
+    nums[i + 1] = key
+    j = j + 1
+  }
+  return nums
+}
+```
+
+```go
+// input : 5, 2, 4, 6, 1, 3
+// output : 6, 5, 4, 3, 2, 1
+func insert_sort(nums [6]int) [6]int {
+  j := 1
+  for j < len(nums) {
+    key := nums[j]
+    i := j - 1
+    for i >= 0 && nums[i] < key {
       nums[i+1] = nums[i]
       i = i - 1
     }
