--- a/算法导论.md
+++ b/算法导论.md
@@ -40,3 +40,19 @@ func insert_sort(nums [6]int) [6]int {
   return nums
 }
 ```
+
+### 分治法
+
+分治模式：
+
+* **分解**原问题为若干子问题，这鞋子问题是原问题的规模较小的实例
+* **解决**这些子问题，递归地求解各子问题。然而，若子问题的规模足够小，则直接求解
+* **合并**这些子问题的解成原问题的解
+
+归并排序：
+
+* **分解**：分解待排序的 n 个元素的序列成各具 n/2 个元素的两个子序列
+* **解决**：使用归并排序递归地排序两个子序列
+* **合并**：合并两个已排序的子序列已产生的已排序的答案
+
+
