--- a/算法导论.md
+++ b/算法导论.md
@@ -55,4 +55,14 @@ func insert_sort(nums [6]int) [6]int {
 * **解决**：使用归并排序递归地排序两个子序列
 * **合并**：合并两个已排序的子序列已产生的已排序的答案
 
+## 分治策略
+
+求解递归式的三种方法：
+
+* **代入法** 我们猜测一个界，然后使用数学归纳法证明这个界是正确的
+* **递归树法** 将递归式转化为一棵树，其结点表示不同层次的递归调用产生的代价。然后从用边界和技术求解递归式。
+* **主方法** 可求解形如下面公式的递归式的界：
+
+<p align="center"><img src="http://latex.codecogs.com/gif.latex?T%28n%29%3DaT%28%5Cfrac%7Bn%7D%7Bb%7D%29&plus;f%28n%29"/></p>
+
 
