--- a/算法导论.md
+++ b/算法导论.md
@@ -65,4 +65,12 @@ func insert_sort(nums [6]int) [6]int {
 
 <p align="center"><img src="http://latex.codecogs.com/gif.latex?T%28n%29%3DaT%28%5Cfrac%7Bn%7D%7Bb%7D%29&plus;f%28n%29"/></p>
 
+### 最大子数组问题
+
+假设一家公司的股票，你可以选择一个时间买进，一个时间卖出。股票市场不稳定，有高有低。那么你如何选择合适的时间点买进以及卖出，从而保证收益最大化。这个问题可以抽象成一个最大子数组问题。
+
+#### 暴力求解方法
+
+可以还容易设计一个暴力方法求解本问题：简单地尝试没对可能买进和卖出的日期组合，只要卖出日期在买入日期之后即可。n 天中共有<span verticle-align="middle"><img src="http://latex.codecogs.com/gif.latex?%5Cbinom%7Bn%7D%7B2%7D"/></span>
+
 
