--- a/算法导论.md
+++ b/算法导论.md
@@ -73,4 +73,8 @@ func insert_sort(nums [6]int) [6]int {
 
 可以还容易设计一个暴力方法求解本问题：简单地尝试没对可能买进和卖出的日期组合，只要卖出日期在买入日期之后即可。n 天中共有<span verticle-align="middle"><img src="http://latex.codecogs.com/gif.latex?%5Cbinom%7Bn%7D%7B2%7D"/></span>种日期组合，这种方法的运行时间为![](http://latex.codecogs.com/gif.latex?%5COmega%20%28n%5E2%29)。只有当数组中包含负数的时候，最大子数组问题才有意义。如果所有数组元素都是非负数，最大子数组肯定就是整个数组的和。
 
+#### 使用分治策略的求解方法
+
+假定我们要寻找子数组 `A[low..high]` 的最大子数组。
+
 
